Update image source in index.html

--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
   </style>
 </head>
 <body>
-  <img src="양산사공 A-8블록 당근마켓 최종_251107.jpg" alt="양산사송 A-8BL 입주자 추가모집 포스터">
+  <img src="sasong_landing_page.jpg" alt="양산사송 A-8BL 입주자 추가모집 포스터">
 </body>
 </html>
