--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
     body {
       margin: 0;
       padding: 0;
-      text-align: center;
       background-color: #f8f8f8;
       font-family: Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      min-height: 100vh;
     }
 
     .container {
@@ -18,7 +22,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      min-height: 100vh;
+      width: 100%;
       padding: 20px;
     }
 
@@ -28,12 +32,18 @@
       height: auto;
       border-radius: 8px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      margin-top: 20px;
     }
 
-    /* ✅ 버튼 기본 디자인 */
+    /* ✅ 버튼 중앙 정렬 */
     .button-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
       margin-top: 25px;
     }
+
     .apply-btn {
       display: inline-block;
       padding: 18px 55px;
@@ -46,6 +56,7 @@
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
       transition: transform 0.2s ease, background-color 0.3s ease;
     }
+
     .apply-btn:hover {
       transform: scale(1.05);
       background-color: #465bc2;
