--- a/index.html
+++ b/index.html
@@ -41,17 +41,18 @@
       justify-content: center;
       align-items: center;
       width: 100%;
-      margin-top: 25px;
+      margin-top: 20px;
+      margin-bottom: 30px;
     }
 
     .apply-btn {
       display: inline-block;
-      padding: 18px 55px;
+      padding: 14px 45px;
       background-color: #5669d5;
       color: #ffeb3b;
       text-decoration: none;
       border-radius: 35px;
-      font-size: 22px;
+      font-size: 20px;
       font-weight: bold;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
       transition: transform 0.2s ease, background-color 0.3s ease;
@@ -70,11 +71,17 @@
         border-radius: 0;
         box-shadow: none;
       }
+
       .apply-btn {
-        font-size: 20px;
-        padding: 16px 40px;
-        width: 90%;
-        max-width: 400px;
+        font-size: 17px;
+        padding: 12px 30px;
+        width: auto;
+        max-width: 300px;
+      }
+
+      .button-container {
+        margin-top: 15px;
+        margin-bottom: 25px;
       }
     }
   </style>
